tempfile/derive_more/tests/compile_fail/debug/duplicate_fmt_on_struct.rs
#[derive(derive_more::Debug)]
#[debug("Test")]
#[debug("Second")]
pub struct Foo {}

fn main() {}
